samples/_failures_safe/1761731614_ba1f03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e4ba3da.c: In function ‘main’:
./samples/SAFE/__tmp_4e4ba3da.c:152:21: error: expected declaration or statement at end of input
  152 |                     printf("Error: Matrices must have same dimensions for addition.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_4e4ba3da.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e4ba3da.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e4ba3da.c:152:21: error: expected declaration or statement at end of input
